--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="./restaurant-icon.png" type="image/png">
+    <title>Restaurants</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
